--- a/02-counter-app/js/components/counter.html
+++ b/02-counter-app/js/components/counter.html
@@ -2,4 +2,5 @@
     <input type="text" ng-model="$ctrl.count">
     <button type="button" ng-click="$ctrl.decrement();">-</button>
     <button type="button" ng-click="$ctrl.increment();">+</button>
+    <h1>{{$ctrl.count}}</h1>
 </div>
